-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0
-
None
-
729c80375 (14.0)
i've been seeing an odd behaviour: when editing the environment variables in the text field and then run the executable, the envvars are not immediately appied, which leads to a flaky behaviour:
steps:
- edit envvars in text field
- quickly start application (e.g. with ctrl-r)
expected behaviour:
the process should be started with the environment variables at the time of starting the application.
actual behaviour:
in some cases i see that the changes done in the envvars text field have not been applied. seems to be the case when the application is immediately started after the envvar text field is modified. (e.g. by quickly typing inside the envvars text field, followed by a ctrl-r)
attached screen recording shows the behaviour with this test program (i was typing in the text field and ctrl-r)
#include <cstdio> #include <cstdlib> int main(int argc, char *argv[]) { auto x = ::getenv("MYVAR"); if (x) fprintf(stderr, "MYVAR %s\n", x); else fprintf(stderr, "MYVAR nullptr\n"); return 0; }
| For Gerrit Dashboard: QTCREATORBUG-31052 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 569153,2 | ProjectExplorer: Ensure environment from aspect is always up to date | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |