ProjectExplorer: Ensure environment from aspect is always up to date

Otherwise our (intential) delay when updating the environment from the
text edit can lead to surprises for the user.

Fixes: QTCREATORBUG-31052
Change-Id: Iaba8c496094ad95d8c099c67c0805317f32a2936
Reviewed-by: hjk <hjk@qt.io>