src/plugins/projectexplorer/environmentaspect.cpp
@@ -69,7 +69,7 @@ void EnvironmentAspect::setUserEnvironmentChanges(const Utils::EnvironmentItems 
 Utils::Environment EnvironmentAspect::environment() const
 {
     Environment env = modifiedBaseEnvironment();
-    env.modify(m_userChanges);
+    env.modify(userEnvironmentChanges());
     return env;
 }
 
@@ -165,4 +165,9 @@ Environment EnvironmentAspect::BaseEnvironment::unmodifiedBaseEnvironment() cons
     return getter ? getter() : Environment();
 }
 
+Utils::EnvironmentItems EnvironmentAspect::userEnvironmentChanges() const
+{
+    emit userChangesUpdateRequested();
+    return m_userChanges;
+}
 } // namespace ProjectExplorer
